--- a/main.html
+++ b/main.html
@@ -7,7 +7,9 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<div id="container">
+		This is the main element you'll work with
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
