--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<div id="container">
-		This is the main element you'll work with
+		This is the main container element
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
